--- a/src/public/gens.html
+++ b/src/public/gens.html
@@ -35,8 +35,11 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active">
+                    <li>
                         <a href="/">Home</a>
+                    </li>
+                    <li class="active">
+                        <a href="/gens.html">Generations</a>
                     </li>
                 </ul>
             </div>
@@ -45,11 +48,10 @@
     </nav>
 
     <div class="container">
-        <h1>Hello!</h1>
         <form class="form-inline">
             <div class="form-group">
                 <input type="text" data-provide="typeahead" autocomplete="off" id="query">
-                <button id="btnSearch" class="btn btn-primary">
+                <button id="btnSearch" class="btn btn-primary" type="submit">
                     <i class="fa fa-search" aria-hidden="true"></i>
                 </button>
             </div>
