--- a/src/public/gens.html
+++ b/src/public/gens.html
@@ -13,10 +13,17 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    
     <link rel="stylesheet" href="/stylesheets/main.css">
     <link rel="stylesheet" href="/stylesheets/sprite.css">
     <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" href="/images/launcher-icon-2x.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/images/launcher-icon-3x.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="/images/launcher-icon-4x.png">
+    <link rel="apple-touch-startup-image" href="/images/launcher-icon-3x.png">
+    <meta name="apple-mobile-web-app-title" content="My Pokemon Pokedex">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
