--- a/src/public/index.html
+++ b/src/public/index.html
@@ -13,7 +13,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/stylesheets/main.css">
     <link rel="stylesheet" href="/stylesheets/sprite.css">
     <link rel="manifest" href="/manifest.json">
@@ -24,7 +24,7 @@
     <meta name="apple-mobile-web-app-title" content="My Pokemon Pokedex">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    
+
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -59,11 +59,24 @@
     </nav>
 
     <div class="container">
-        <form class="form-inline">
+        <form class="form">
+            <div class="form-group" id="group-query">
+                <label class="control-label" for="query">Name:</label>
+                <input type="text" data-provide="typeahead" autocomplete="off" id="query" class="form-control">
+            </div>
+            <div class="form-group" id="group-dexid">
+                <label class="control-label" for="dexid">PokeDex Id:</label>
+                <div class="input-group">
+                    <span class="input-group-addon">#</span>
+                    <input type="number" autocomplete="off" id="dexid" class="form-control">
+                </div>
+            </div>
             <div class="form-group">
-                <input type="text" data-provide="typeahead" autocomplete="off" id="query">
                 <button id="btnSearch" class="btn btn-primary" type="submit">
-                    <i class="fa fa-hourglass" aria-hidden="true"></i>
+                    <i class="fa fa-search" aria-hidden="true"></i> Search
+                </button>
+                <button id="btnClear" class="btn btn-default" type="reset">
+                    <i class="fa fa-trash" aria-hidden="true"></i> Clear
                 </button>
             </div>
         </form>
@@ -106,11 +119,40 @@
                 }
             });
 
+            $('#dexid').keypress(function (event) {
+
+                var keycode = (event.keyCode ? event.keyCode : event.which);
+                if (keycode == "13") {
+                    jQuery("#btnSearch").click();
+                    event.stopPropagation();
+                    return false;
+                }
+            });
+
+            jQuery("#btnClear").click(function (event) {
+                jQuery("#group-dexid").removeClass("has-error");
+                jQuery("#group-query").removeClass("has-error");
+                jQuery("#dexid").val("");
+                jQuery("#query").val("");
+
+                event.stopPropagation();
+                return false;
+            });
+
             jQuery("#btnSearch").click(function (event) {
                 jQuery("#btnSearch").setWait();
+                var queryText = '';
+                var field = '#group-dexid';
 
-                var query = jQuery("#query").typeahead("getActive");
-                var queryText = (query ? query.id : jQuery("#query").val());
+                if (jQuery("#dexid").val() != '') {
+                    queryText = jQuery("#dexid").val();
+                } else {
+                    field = '#group-query';
+                    query = jQuery("#query").typeahead("getActive");
+                    queryText = (query ? query.id : jQuery("#query").val());
+                }
+
+                jQuery(field).removeClass("has-error");
 
                 apiClient.getSpecies(queryText)
                     .then(function (species) {
@@ -120,6 +162,9 @@
                         jQuery("#btnSearch").unSetWait();
                     }).catch(function (e) {
                         jQuery("#btnSearch").unSetWait();
+                        jQuery("#results").html(
+                            "<span class='has-error'>Sorry this Pokemon was not found.</span>");
+                        jQuery(field).addClass("has-error");
                     });
 
                 event.stopPropagation();
