--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -73,14 +73,7 @@
     <ng-view></ng-view>
   </div>
   <div class="pogo none"></div>
-  <script src="app/app.js"></script>
-  <script src="app/services/ApiClientService.js"></script>
-  <script src="app/controllers/EvolutionsController.js"></script>
-  <script src="app/controllers/GenerationsController.js"></script>
-  <script src="app/controllers/GenerationController.js"></script>
-  <script src="app/controllers/HomeController.js"></script>
-  <script src="app/controllers/NavbarController.js"></script>
-  <script src="app/controllers/PokemonController.js"></script>
+  <script src="app/app.min.js"></script>  
 </body>
 
 </html>
